--- a/doc/help/commands.asciidoc
+++ b/doc/help/commands.asciidoc
@@ -42,6 +42,7 @@ possible to run or bind multiple commands by separating them with `;;`.
 |<<close,close>>|Close the current window.
 |<<cmd-later,cmd-later>>|Execute a command after some time.
 |<<cmd-repeat,cmd-repeat>>|Repeat a given command.
+|<<cmd-repeat-last,cmd-repeat-last>>|Repeat the last executed command.
 |<<cmd-run-with-count,cmd-run-with-count>>|Run a command with the given count.
 |<<cmd-set-text,cmd-set-text>>|Preset the statusbar to some text.
 |<<config-clear,config-clear>>|Set all settings back to their default.
@@ -97,7 +98,6 @@ possible to run or bind multiple commands by separating them with `;;`.
 |<<quickmark-save,quickmark-save>>|Save the current page as a quickmark.
 |<<quit,quit>>|Quit qutebrowser.
 |<<reload,reload>>|Reload the current/[count]th tab.
-|<<repeat-command,repeat-command>>|Repeat the last executed command.
 |<<report,report>>|Report a bug in qutebrowser.
 |<<restart,restart>>|Restart qutebrowser while keeping existing tabs open.
 |<<save,save>>|Save configs and state.
@@ -313,6 +313,13 @@ Multiplies with 'times' when given.
 * This command does not split arguments after the last argument and handles quotes literally.
 * With this command, +;;+ is interpreted literally instead of splitting off a second command.
 * This command does not replace variables like +\{url\}+.
+
+[[cmd-repeat-last]]
+=== cmd-repeat-last
+Repeat the last executed command.
+
+==== count
+Which count to pass the command.
 
 [[cmd-run-with-count]]
 === cmd-run-with-count
@@ -1114,13 +1121,6 @@ Reload the current/[count]th tab.
 
 ==== count
 The tab index to reload.
-
-[[repeat-command]]
-=== repeat-command
-Repeat the last executed command.
-
-==== count
-Which count to pass the command.
 
 [[report]]
 === report
