notifications: Don't complain on upgraded server spec version
If a server gets fixed and now advertises spec 1.2, there is no reason we should
complain about things.

See https://github.com/phuhl/linux_notification_center/commit/5427acd551ce6dc4c74bdf8090904c6d254b74f1

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -202,6 +202,7 @@ Fixed
 - Crash when using QtWebKit with PAC and the file has an invalid encoding.
 - Crash with the "tiramisu" notification server.
 - Crash when the "herbe" notification presenter doesn't start correctly.
+- Warning with recent versions of the "deadd" (aka "linux notification center") notification server.
 - Crash when using `:print --pdf` with a directory where its parent directory
   did not exist.
 - The `PyQt{5,6}.sip` version is now shown correctly in the :version|--version
