Add --all to :{quick,book}mark-del
Needed mostly for urlmarks BDD tests so they can clear things between tests.
Hopefully with --all, this won't be accidentally triggered by users.

Preparation for #7815

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -67,6 +67,8 @@ Added
 - New `colors.webpage.darkmode.increase_text_contrast` setting for Qt 6.3+
 - New `fonts.tooltip`, `colors.tooltip.bg` and `colors.tooltip.fg` settings.
 - New `log-qt-events` debug flag for `-D`
+- New `--all` flags for `:bookmark-del` and `:quickmark-del` to delete all
+  quickmarks/bookmarks.
 
 Removed
 ~~~~~~~
