Fix url.auto_search=dns on Qt 6
With PyQt6, comparing an enum member to bool will always be False.

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -24,6 +24,7 @@ Fixed
 
 - The "restore video" functionality of the `view_in_mpv` script works again on
   webengine.
+- Setting `url.auto_search` to `dns` works correctly now with Qt 6.
 
 [[v3.0.0]]
 v3.0.0 (2023-08-18)
