--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -26,7 +26,7 @@ Fixed
   webengine.
 - Setting `url.auto_search` to `dns` works correctly now with Qt 6.
 - Counts passed via keypresses now have a digit limit (4300) to avoid
-  segfaults due to cats sleeping on numpads. (#7834)
+  exceptions due to cats sleeping on numpads. (#7834)
 
 [[v3.0.0]]
 v3.0.0 (2023-08-18)
