--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -29,7 +29,7 @@ Fixed
   exceptions due to cats sleeping on numpads. (#7834)
 - Ignored URL query parameters (via `url.yank_ignored_parameters`) are now
   respected when yanking any URL (for example, through hints with `hint links
-  yank`). The `{url:yank}` subsitution has also been added as a version of
+  yank`). The `{url:yank}` substitution has also been added as a version of
   `{url}` that respects ignored URL query parameters. (#7879)
 - Navigating via hints to a remote URL from a file:// one works again. (#7847)
 - The timers related to the tab audible indicator and the auto follow timeout
