--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -54,6 +54,8 @@ Fixed
 - Graphical glitches in Google sheets and PDF.js via a new setting
   `qt.workarounds.disable_accelerated_2d_canvas` to disable the accelerated 2D
   canvas feature which defaults to enabled on affected Qt versions. (#7489)
+- Workaround a Qt issue causing jpeg files to not show up in the upload file
+  picker when it was filtering for image filetypes (#7866)
 
 [[v3.0.0]]
 v3.0.0 (2023-08-18)
