--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,27 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v3.0.2]]
+v3.0.2 (unreleased)
+-------------------
+
+Fixed
+~~~~~
+
+- Upgraded the bundled Qt version to 6.5.3. Note this is only relevant for the
+  macOS/Windows releases, on Linux those will be upgraded via your distribution
+  packages. This Qt patch release comes with
+  https://code.qt.io/cgit/qt/qtreleasenotes.git/tree/qt/6.5.3/release-note.md[various important fixes],
+  among them:
+    * Fix for crashes on Google Meet / GMail with dark mode enabled
+    * Fix for right-click in devtools not working properly
+    * Fix for drag & drop not working on Wayland
+    * Fix for some XKB key remappings not working
+    * Security fixes up to Chromium 116.0.5845.187, including
+      https://chromereleases.googleblog.com/2023/09/stable-channel-update-for-desktop_11.html[CVE-2023-4863],
+      a critical heap buffer overflow in WebP, for which "Google is aware that an
+      exploit [...] exists in the wild."
+
 [[v3.0.1]]
 v3.0.1 (2023-10-19)
 -------------------
@@ -38,19 +59,6 @@ Fixed
   transparent.
 - Due to a Qt bug, cloning/undoing a tab which was not fully loaded caused
   qutebrowser to crash. This is now fixed via a workaround.
-- Upgraded the bundled Qt version to 6.5.3. Note this is only relevant for the
-  macOS/Windows releases, on Linux those will be upgraded via your distribution
-  packages. This Qt patch release comes with
-  https://code.qt.io/cgit/qt/qtreleasenotes.git/tree/qt/6.5.3/release-note.md[various important fixes],
-  among them:
-    * Fix for crashes on Google Meet / GMail with dark mode enabled
-    * Fix for right-click in devtools not working properly
-    * Fix for drag & drop not working on Wayland
-    * Fix for some XKB key remappings not working
-    * Security fixes up to Chromium 116.0.5845.187, including
-      https://chromereleases.googleblog.com/2023/09/stable-channel-update-for-desktop_11.html[CVE-2023-4863],
-      a critical heap buffer overflow in WebP, for which "Google is aware that an
-      exploit [...] exists in the wild."
 - Graphical glitches in Google sheets and PDF.js via a new setting
   `qt.workarounds.disable_accelerated_2d_canvas` to disable the accelerated 2D
   canvas feature which defaults to enabled on affected Qt versions. (#7489)
