--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,25 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v3.1.0]]
+v3.1.0 (unreleased)
+-------------------
+
+Changed
+~~~~~~~
+
+- (TODO) Upgraded the bundled Qt version to 6.6.1, based on Chromium 112. Note
+  this is only relevant for the macOS/Windows releases, on Linux those will be
+  upgraded via your distribution packages.
+
+Fixed
+~~~~~
+
+- (TODO) Compatibility with PDF.js v4
+- Added an elaborate workaround for a bug in QtWebEngine 6.6.0 causing crashes
+  on Google Mail/Meet/Chat.
+
+
 [[v3.0.2]]
 v3.0.2 (2023-10-19)
 -------------------
