Expose QtWebEngine 6.6 dark mode image classifier policy
Implemented as a separate setting in Chromium, but exposed to qutebrowser users
as a value for `policy.images`, as it's a simple toggle that does not have any
effect when `policy.images` is not set to `smart` anyways.

To support this, the _Settings.mapping value now supports None values,
which leads to _Setting.chromium_tuple to return None, which means that
no switch is added in this case.

See #7646

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -25,6 +25,13 @@ Removed
 - The darkmode settings `grayscale.all`, `grayscale.images` and
   `increase_text_contrast` got removed, following removals in Chromium.
 
+Added
+~~~~~
+
+- New `smart-simple` value for `colors.webpage.darkmode.policy.images`, which on
+  QtWebEngine 6.6+ uses a simpler classification algorithm to decide whether to
+  invert images.
+
 Changed
 ~~~~~~~
 
