--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -49,6 +49,8 @@ Changed
 Fixed
 ~~~~~
 
+- Some web pages jumping to the top when the statusbar is hidden or (with
+  v3.0.x) when a prompt is hidden.
 - Compatibility with PDF.js v4
 - Added an elaborate workaround for a bug in QtWebEngine 6.6.0 causing crashes
   on Google Mail/Meet/Chat, and a bug in QtWebEngine 6.5.0/.1/.2 causing crashes
