Avoid quitting when closing KDE file dialog
See https://bugreports.qt.io/browse/QTBUG-124386

Fixes #8143

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -41,6 +41,8 @@ Fixed
 
 - `input.insert_mode.auto_load` sometimes not triggering due to a race
   condition.
+- Worked around qutebrowser quitting when closing a KDE file dialog due to a Qt
+  bug.
 
 [[v3.1.1]]
 v3.1.1 (unreleased)
